--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Brain Improve Study</string>
-    <string name="app_inbuilt_name">Jesil Brain Improment Study</string>
+    <string name="app_inbuilt_name">Jesil Brain Improvement Study</string>
     <string name="button_title">Start</string>
     <string name="todo">TODO</string>
     <string name="mathematics">Mathematics</string>
